<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fiszki Shaker</string>
    <string name="action_settings">Ustawienia</string>
    <string name="welcome_message">Welcome!</string>
    <string name="buttom_main">click me.</string>
    <string name="background_description">background image</string>
    <string name="shake_to_perform_action">następne słowo</string>
    <string name="choose_language">Choose language</string>
    <string name="no_languages_alert_title">no languages to display</string>
    <string name="no_languages_alert_description">there was some problem in fetching language list. Please try again later or check Your internet connection.</string>
    <string name="no_items_to_display">No items to display.</string>
    <string name="wybierz_zestaw">pobierz zestaw</string>
    <string name="choose_topic">wybierz temat</string>
    <string name="choose_words">wybierz słowa które chcesz pobrać</string>
    <string name="submit">załaduj</string>
    <string name="know_this_word">znam to słowo</string>
    <string name="dont_know_this_word">nie znam słowa</string>
    <string name="current_score">wynik:</string>
    <string name="undo">cofnij</string>
    <string name="sound">dźwięk</string>
    <string name="save">zapisz</string>
    <string name="activity_settings">Ustawienia</string>
    <string name="menu_add_new_word">dodaj nowe słowo</string>
    <string name="add_new_word_word">nowe słowo</string>
    <string name="add_new_word_description">tłumaczenie</string>
    <string name="button_add_new_word_submit">Dodaj</string>
    <string name="activity_add_new_word">dodaj nowe słowo</string>
    <string name="word_succesfully_added">poprawnie dodano pozycję do słownika</string>
    <string name="menu_add_new_dictionary">dodaj nowy zestaw</string>
    <string name="textView_add_new_dictionary_enter_title">Nazwa nowego słownika:</string>
    <string name="pozwol_innym_na_korzystanie_z_niego">pozwól, by inni mogli wykorzystać ten zestaw w przyszłości</string>
    <string name="textView_add_new_word">dodaj pozycję:</string>
    <string name="activity_add_new_wordset">dodaj</string>
    <string name="word">słowo</string>
    <string name="translation">tłumaczenie</string>
    <string name="title">nazwa zestawu słówek</string>
    <string name="word_has_ben_included">zostanie dodane do nowego słownika</string>
    <string name="word_has_ben_excluded">nie zostanie dodane do nowego słownika</string>
    <string name="add_to_list">dodaj do listy</string>
    <string name="create_set">zatwierdź zestaw</string>
    <string name="checkBox_random_fetching">losuj fiszki</string>
    <string name="activity_choose_local_set">wybierz z dostępnego zestawu słówek</string>
    <string name="menu_choose_wordset">moje zestawy słówek</string>
    <string name="wordset_with_that_name_already_exists">Zestaw słówek o takiej nazwie został pobrany już wcześniej.</string>
    <string name="choose_wordset">wybierz</string>
    <string name="delete_wordset">usuń</string>
    <string name="are_you_sure_you_want_to_delete_wordset">Czy jestes pweien, że chcesz usunąć ten zestaw?</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>
    <string name="you_have_to_have_at_least_one_wordset">nie możesz usunąć ostatniego zestawu słówek</string>
    <string name="activity_main">nauka słówek</string>
    <string name="title_bar_starting_point_activity">Menu główne</string>
    <string name="activity_flipcards">Fiszki</string>
    <string name="activity_download_wordset">Pobierz słówka</string>
    <string name="title_add_new_wordset">Dodaj nowy zestaw słówek</string>
    <string name="title_bar_settings_activity">Ustawienia</string>
    <string name="activity_choose_language">Wybierz język</string>
    <string name="titlebar_topic_list">Wybierz zestaw</string>
    <string name="titlebar_word_list">podgląd</string>
    <string name="i_know_the_answer">znam słowo</string>
    <string name="go_to_next">następne</string>
    <string name="title_add_new_word">dodaj nowe słowo do tego słownika</string>
    <string name="manage_wordsets">Moje słówka</string>
    <string name="manage_sets">Moje słówka</string>

</resources>