<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_add_new_dictionary_enter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_add_new_dictionary_enter_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_add_new_dictionary_enter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <CheckBox
            android:id="@+id/checkBox_allow_other_to_use_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pozwol_innym_na_korzystanie_z_niego" />

        <TextView
            android:id="@+id/textView_add_new_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_add_new_word"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_add_new_dictionary_add_new_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <EditText
            android:id="@+id/editText_add_new_dictionary_add_new_translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/button_add_new_dictionary_add_another"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_list" />

      <LinearLayout
            android:id="@+id/test_this"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/button_add_new_dictionary_submit_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_set" />

      
    </LinearLayout>
</ScrollView>