<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_add_new_word_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_word_word"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_add_new_word_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textview_add_new_word_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_word_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_add_new_word_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/button_add_new_word_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addNewWord"
        android:text="@string/button_add_new_word_submit" />

</LinearLayout>
