<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D3B471">

    <CheckBox
        android:id="@+id/checkbox_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:text="@string/sound"
        android:paddingLeft="50dp"/>

    <CheckBox
        android:id="@+id/checkBox_random_fetching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:text="@string/checkBox_random_fetching"
        android:paddingLeft="50dp"/>

    <Button
        android:id="@+id/button_save_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@drawable/button_settings_blue"
        android:padding="15dp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"/>

</LinearLayout>
